--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <body>
     <h1>I'm a header 1!</h1>
 <img src="https://avatars0.githubusercontent.com/u/40930633?v=4">
+    <ol>
+      <li>this</li>
+      <li>is</li>
+      <li>orderd list</li>
+    </ol>
+    <ul>
+      <li>this</li>
+      <li>is</li>
+      <li>unorderd list</li>
 
   </body>
 
