--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ol>
       <li>this</li>
       <li>is</li>
-      <li>orderd list</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     </ol>
     <ul>
       <li>this</li>
