--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li>this</li>
       <li>is</li>
       <li>unorderd list</li>
-
+<link rel="stylesheet" href="style.css">
   </body>
 
 </html>
