--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>hello</title>
@@ -14,6 +15,7 @@
       <li>this</li>
       <li>is</li>
       <li>unorderd list</li>
+    </ul>
 <link rel="stylesheet" href="style.css">
   </body>
 
